--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>proyecto gib</title>
 </head>
 <body>
-    <h1>proyecto  yahir mendoza github</h1>
-    <h1> creando un imperio y cada dia mas a un paso de dominar el mundo</h1>
+    <h1 style="color:blue;> me gustas mucho <3 </h1> 
+    <h1>me encantas navita</h1>
 </body>
 </html>
