--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>proyecto gib</title>
 </head>
-<body>
-    <h1 style="color:blue;> me gustas mucho <3 </h1> 
-    <h1>me encantas navita</h1>
+<body style="background-color: black;">
+    <h1 style="color: brown;">me gustas mucho navita<3</h1>
+    <br>
+    <h1 style="color: blue;">me encantas mi niña hermosa</h1>
 </body>
 </html>
