--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>proyecto gib</title>
 </head>
 <body style="background-color: black;">
-    <h1 style="color: brown;">me gustas mucho navita<3</h1>
+    <h1 style="color: brown;">prueba de github</h1>
     <br>
-    <h1 style="color: blue;">me encantas mi niña hermosa</h1>
+    <h2 style="color: blue;">mi nombre es yahirMendoza y voy a dominar el mundo JAJAJA XDXD</h2>
+<button><h2 style="color: blue;"> soy ese miauu</h2></button> <br>
+
+<img src="https://pbs.twimg.com/media/EIW55xzXsAAxVRH.jpg:large" alt="" height="200px">
 </body>
 </html>
